--- a/CSS/main.css
+++ b/CSS/main.css
@@ -215,6 +215,12 @@ nav ul li ul li a {
     width: 100%;
     color:white;
 }
+.fdb-block2{ 
+    margin: 0 auto;
+    background: rgb(0, 0, 0);
+    width: 100%;
+    color:white;
+}
 .foot{
     max-width: 50;
     margin: 0 auto;
@@ -223,6 +229,7 @@ nav ul li ul li a {
     width: 100%;
     color: white;
 }
+
 .brand {
     position: absolute;
     padding-left: 20px;
@@ -245,13 +252,12 @@ nav ul li ul li a {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.flex-container{
-    display: flex;
-    width: 100%;
-    height: 500px;
-    border: 2px stateblue solid;
-    flex-wrap: wrap;
-    flex-flow: row wrap;
+.container{
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(100px, 1fr));
+    grid-gap: 2px;
+    grid-auto-rows: minmax(200px,auto);
+    grid-auto-columns: minmax(200px,auto);
     }
 
 .flex-item{
@@ -259,6 +265,7 @@ nav ul li ul li a {
     height: 75px;
     background-color: blue;
     border: 2px solid darkblue;
+    border-radius: 3px;
     text-align: center;
     font-size: 2em;
     color: white;
