--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,18 +1,19 @@
-
-*{
-   margin: 0; 
-   padding: 0;
-   box-sizing: border-box;
-   transition: .2s linear;
-   font-family: "poppins", sans-serif;
-   color: #fff;
+@font-face {
+   font-family: 'hall5';
+   src:  url('../fonts/hall5.eot?ir7j6y');
+   src:  url('../fonts/hall5.eot?ir7j6y#iefix') format('embedded-opentype'),
+   url('../fonts/hall5.ttf?ir7j6y') format('truetype'),
+   url('../fonts/hall5.woff?ir7j6y') format('woff'),
+   url('../fonts/hall5.svg?ir7j6y#hall5') format('svg');
+   font-weight: normal;
+   font-style: normal;
 }
+
 
 body{
     background: black;  
 }
 .wrapper{
-margin: 10px auto;
 padding: 0 10%;
 padding-bottom: 10px;
 text-transform: capitalize;
