--- a/CSS/main.css
+++ b/CSS/main.css
@@ -201,6 +201,7 @@ nav ul li ul li a {
     color:white;
 }
 .main_block{
+    padding: 7.5%;
     max-width: 100;
     margin: 0 auto;
     background: rgb(0, 0, 0);
