--- a/CSS/product.css
+++ b/CSS/product.css
@@ -10,13 +10,11 @@
 }
 
 
-body{
-    background: black;  
-}
 .wrapper{
-padding: 0 10%;
+padding: 7.5%;
 padding-bottom: 10px;
 text-transform: capitalize;
+background-color: black;
 }
 h1{
     color: #fff;
