--- a/CSS/product.css
+++ b/CSS/product.css
@@ -74,6 +74,15 @@ h1{
     transform: scale(1.03);
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
  }
+ .foot{
+   max-width: 50;
+   margin: 0 auto;
+   background: rgba(16, 16, 16, 0.858);
+   height: 200px;
+   width: 100%;
+   color: white;
+}
+
  @media(max-width:770px){
     .wrapper{
         padding: 20px;
