--- a/CSS/product.css
+++ b/CSS/product.css
@@ -16,6 +16,23 @@ padding-bottom: 10px;
 text-transform: capitalize;
 background-color: black;
 }
+.container1{
+   display: grid;
+   grid-gap: 10px;
+   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+}
+.box1{
+   height: 700px;
+   text-align:left;
+   border-radius: 5px;
+   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.box2{
+   height: 700px;
+   text-align:justify;
+   border-radius: 5px;
+   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
 h1{
     color: #fff;
     font-size: 45px;
